objects/ACP_Oppty_TAM_Report__c.object
<CustomObject>
    <fields>
        <fullName>ACP_L12_Won__c</fullName>
        <description>To store L12M Won report ID</description>
        <inlineHelpText>Enter L12M Won Report Id</inlineHelpText>
        <label>L12M Won</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Lost_BU_Profit_Center__c</fullName>
        <description>To store BU Profit Center value for DND Lost report</description>
        <label>BU Profit Center</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Data and Devices</fullName>
                </value>
                <value>
                    <fullName>Data &amp; Devices</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_Lost_Confidence__c</fullName>
        <label>Confidence</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Won</fullName>
                </value>
                <value>
                    <fullName>Weak</fullName>
                </value>
                <value>
                    <fullName>50/50</fullName>
                </value>
                <value>
                    <fullName>Likely</fullName>
                </value>
                <value>
                    <fullName>Commit</fullName>
                </value>
                <value>
                    <fullName>Dead</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_Lost_DISTRIBUTOR2__c</fullName>
        <description>To store Distributor with an empty value for Lost report for Channel BU</description>
        <label>DISTRIBUTOR2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Lost_DISTRIBUTOR__c</fullName>
        <description>To store Distributor for Lost report for Channel BU</description>
        <label>DISTRIBUTOR</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None-Direct Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_Lost_Date2__c</fullName>
        <description>To store Date for Lost report for Channel BU</description>
        <label>Date2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Lost_Date__c</fullName>
        <description>To store Lost date in L12MLost report</description>
        <label>Date</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Lost_Lost_Date__c</fullName>
        <description>To store Lost lost date</description>
        <label>Lost Date</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Lost_MED_Portfolio__c</fullName>
        <description>To store MED Portfolio values for Lost report</description>
        <label>MED Portfolio</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Lost_Opp_Group__c</fullName>
        <description>To store Lost Opportunity Group</description>
        <label>Opportunity Group</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>NDR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_Lost_Opp_Record_Type__c</fullName>
        <description>To store Opportunity Record Type for Lost report[this field Not in Use, created multi picklist as Channel BU has multiple values]</description>
        <label>Opp Rec Ty</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ADM</fullName>
                </value>
                <value>
                    <fullName>DND Opportunity</fullName>
                </value>
                <value>
                    <fullName>Channel- Engineering Opportunity,</fullName>
                </value>
                <value>
                    <fullName>Channel- Sales Opportunity,</fullName>
                </value>
                <value>
                    <fullName>Opportunity - Engineering Project,</fullName>
                </value>
                <value>
                    <fullName>Opportunity - Sales Project,</fullName>
                </value>
                <value>
                    <fullName>Engineering Opportunity-CSD,</fullName>
                </value>
                <value>
                    <fullName>Sales Opportunity-CSD,</fullName>
                </value>
                <value>
                    <fullName>IND - Sales Project,</fullName>
                </value>
                <value>
                    <fullName>IND - Engineering project,</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_Lost_Oppty_Rec_Type__c</fullName>
        <description>To store Opportunity Record Type for Lost report</description>
        <label>Opportunity Record Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DND Opportunity</fullName>
                </value>
                <value>
                    <fullName>Channel- Engineering Opportunity</fullName>
                </value>
                <value>
                    <fullName>Channel- Sales Opportunity</fullName>
                </value>
                <value>
                    <fullName>Opportunity - Engineering Project</fullName>
                </value>
                <value>
                    <fullName>Opportunity - Sales Project</fullName>
                </value>
                <value>
                    <fullName>Engineering Opportunity-CSD</fullName>
                </value>
                <value>
                    <fullName>Sales Opportunity-CSD</fullName>
                </value>
                <value>
                    <fullName>IND - Sales Project</fullName>
                </value>
                <value>
                    <fullName>IND - Engineering project</fullName>
                </value>
                <value>
                    <fullName>ADM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_Lost_Part_Confidence__c</fullName>
        <description>To store Part Confidence for Lost report for channel BU</description>
        <label>Part Confidence</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Lost_Phase__c</fullName>
        <description>To store Lost Phase</description>
        <label>Phase</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Dead</fullName>
                </value>
                <value>
                    <fullName>Lost - Closed</fullName>
                </value>
                <value>
                    <fullName>Dead - Closed</fullName>
                </value>
                <value>
                    <fullName>Lost/Dead - Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_Lost_Type__c</fullName>
        <description>To store Type for Lost report</description>
        <label>Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Transfer existing Business</fullName>
                </value>
                <value>
                    <fullName>Defend existing Business</fullName>
                </value>
                <value>
                    <fullName>Stocking Package</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_Lost_Won_Date__c</fullName>
        <description>To store Won date for Lost report</description>
        <label>Won Date</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_NYPL_BU_Profit_Center__c</fullName>
        <description>To store BU Profit Center value for DND NYPL report</description>
        <label>BU Profit Center</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Data and Devices</fullName>
                </value>
                <value>
                    <fullName>Data &amp; Devices</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_NYPL_Confidence2__c</fullName>
        <description>To store NY Pipeline Confidence for different filter criteria</description>
        <label>Confidence2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_NYPL_Confidence__c</fullName>
        <description>To store NY Pipeline Confidence</description>
        <label>Confidence</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Won</fullName>
                </value>
                <value>
                    <fullName>Weak</fullName>
                </value>
                <value>
                    <fullName>50/50</fullName>
                </value>
                <value>
                    <fullName>Likely</fullName>
                </value>
                <value>
                    <fullName>Commit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_NYPL_DISTRIBUTOR2__c</fullName>
        <description>To store Distributor with an empty value for NYPL report for Channel BU</description>
        <label>DISTRIBUTOR2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_NYPL_DISTRIBUTOR__c</fullName>
        <description>To store Distributor for NYPL report for Channel BU</description>
        <label>DISTRIBUTOR</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None-Direct Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_NYPL_Date__c</fullName>
        <description>To store NY Pipeline Date</description>
        <label>Date</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_NYPL_Days_since_last_user_update2__c</fullName>
        <description>To store Days since last user update for NYPL report for Channel BU</description>
        <label>Days since last user update2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACP_NYPL_Days_since_last_user_update__c</fullName>
        <description>To store number of days since last user update for NY Pipeline Report</description>
        <label>Days since last user update</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACP_NYPL_MED_Portfolio__c</fullName>
        <description>To store MED Portfolio values for NYPipeline report</description>
        <label>MED Portfolio</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_NYPL_Opp_Group__c</fullName>
        <description>To store NY Pipeline Opportunity Group</description>
        <label>Opportunity Group</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>NDR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_NYPL_Opp_Record_Type__c</fullName>
        <description>To store Opportunity Record Type for NY Pipeline report[this field Not in Use, created multi picklist as Channel BU has multiple values]</description>
        <label>Opp Rec Ty</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ADM</fullName>
                </value>
                <value>
                    <fullName>DND Opportunity</fullName>
                </value>
                <value>
                    <fullName>Channel- Engineering Opportunity,</fullName>
                </value>
                <value>
                    <fullName>Channel- Sales Opportunity,</fullName>
                </value>
                <value>
                    <fullName>Opportunity - Engineering Project,</fullName>
                </value>
                <value>
                    <fullName>Opportunity - Sales Project,</fullName>
                </value>
                <value>
                    <fullName>Engineering Opportunity-CSD,</fullName>
                </value>
                <value>
                    <fullName>Sales Opportunity-CSD,</fullName>
                </value>
                <value>
                    <fullName>IND - Sales Project,</fullName>
                </value>
                <value>
                    <fullName>IND - Engineering project,</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_NYPL_Opportunity_Record_Type2__c</fullName>
        <description>To store Opportunity record type for NYPL report for Channel BU</description>
        <label>Opportunity Record Type2</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CCR Opportunity</fullName>
                </value>
                <value>
                    <fullName>NDR Opportunity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_NYPL_Oppty_Rec_Type__c</fullName>
        <description>To store Opportunity Record Type for NYPL report</description>
        <label>Opportunity Record Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DND Opportunity</fullName>
                </value>
                <value>
                    <fullName>Channel- Engineering Opportunity</fullName>
                </value>
                <value>
                    <fullName>Channel- Sales Opportunity</fullName>
                </value>
                <value>
                    <fullName>Opportunity - Engineering Project</fullName>
                </value>
                <value>
                    <fullName>Opportunity - Sales Project</fullName>
                </value>
                <value>
                    <fullName>Engineering Opportunity-CSD</fullName>
                </value>
                <value>
                    <fullName>Sales Opportunity-CSD</fullName>
                </value>
                <value>
                    <fullName>IND - Sales Project</fullName>
                </value>
                <value>
                    <fullName>IND - Engineering project</fullName>
                </value>
                <value>
                    <fullName>ADM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_NYPL_Phase__c</fullName>
        <description>To store Phase value for NYPipeline report</description>
        <label>Phase</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Dead</fullName>
                </value>
                <value>
                    <fullName>Lost - Closed</fullName>
                </value>
                <value>
                    <fullName>Dead - Closed</fullName>
                </value>
                <value>
                    <fullName>Lost/Dead - Closed</fullName>
                </value>
                <value>
                    <fullName>Discussion</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_NYPL_Process_Status__c</fullName>
        <description>To store NY Pipeline Process Status</description>
        <label>Process Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-prod</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Ramp-down</fullName>
                </value>
                <value>
                    <fullName>EOL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_NYPL_Type__c</fullName>
        <description>To store NY Pipeline Type of Business</description>
        <label>Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Transfer existing Business</fullName>
                </value>
                <value>
                    <fullName>Defend existing Business</fullName>
                </value>
                <value>
                    <fullName>Stocking Package</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_NYPL_Won_Date__c</fullName>
        <description>To store NY Pipeline Won Date</description>
        <label>Won Date</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_NYPL_aplActivePL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>TO check whether it is active for NY Pipeline report</description>
        <label>APL Active Pipeline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACP_NY_Pipeline__c</fullName>
        <description>Created for Opportunity TAM report.</description>
        <label>NY Pipeline</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_PL4Q_BU_Profit_Center__c</fullName>
        <description>To store BU Profit Center value for DND PL4Q report</description>
        <label>BU Profit Center</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Data and Devices</fullName>
                </value>
                <value>
                    <fullName>Data &amp; Devices</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_PL4Q_Confidence2__c</fullName>
        <description>Hari 4 Oct 17 Added for Account Plan</description>
        <label>Confidence 2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_PL4Q_Confidence__c</fullName>
        <description>To store Pipeline 4Q Rolling Confidence</description>
        <label>Confidence</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Won</fullName>
                </value>
                <value>
                    <fullName>Weak</fullName>
                </value>
                <value>
                    <fullName>50/50</fullName>
                </value>
                <value>
                    <fullName>Likely</fullName>
                </value>
                <value>
                    <fullName>Commit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_PL4Q_DISTRIBUTOR2__c</fullName>
        <description>To store Distributor with an empty value for PL4Q report for Channel BU</description>
        <label>DISTRIBUTOR2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_PL4Q_DISTRIBUTOR__c</fullName>
        <description>To store Distributor for PL4Q report for Channel BU</description>
        <label>DISTRIBUTOR</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None-Direct Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_PL4Q_Date__c</fullName>
        <description>To store Pipeline 4Q Rolling Date</description>
        <label>Date</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_PL4Q_Days_since_last_user_update2__c</fullName>
        <description>To store Days since last user update for PL4Q report for Channel BU</description>
        <label>Days since last user update2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACP_PL4Q_Days_since_last_user_update__c</fullName>
        <description>To store number of days since last user update for Pipeline 4Q Rolling report</description>
        <label>Days since last user update</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACP_PL4Q_MEDOppStatus__c</fullName>
        <description>To store Med Opp Status of Pipeline 4Q Report</description>
        <label>MED Opp Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>P3 - In Quoting Opportunity</fullName>
                </value>
                <value>
                    <fullName>QR - Quote Released</fullName>
                </value>
                <value>
                    <fullName>AC - Active Project</fullName>
                </value>
                <value>
                    <fullName>CM - Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_PL4Q_MED_Portfolio__c</fullName>
        <description>To store MED Portfolio values for Pipeline 4Q report</description>
        <label>MED Portfolio</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_PL4Q_Opp_Group__c</fullName>
        <description>To store Pipeline 4Q Rolling Opportunity Group</description>
        <label>Opportunity Group</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>NDR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_PL4Q_Opp_Record_Type__c</fullName>
        <description>To store Opportunity Record Type for PL4Q reports [this field Not in Use, created multi picklist as Channel BU has multiple values]</description>
        <label>Opp Rec Ty</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ADM</fullName>
                </value>
                <value>
                    <fullName>DND Opportunity</fullName>
                </value>
                <value>
                    <fullName>Channel- Engineering Opportunity,</fullName>
                </value>
                <value>
                    <fullName>Channel- Sales Opportunity,</fullName>
                </value>
                <value>
                    <fullName>Opportunity - Engineering Project,</fullName>
                </value>
                <value>
                    <fullName>Opportunity - Sales Project,</fullName>
                </value>
                <value>
                    <fullName>Engineering Opportunity-CSD,</fullName>
                </value>
                <value>
                    <fullName>Sales Opportunity-CSD,</fullName>
                </value>
                <value>
                    <fullName>IND - Sales Project,</fullName>
                </value>
                <value>
                    <fullName>IND - Engineering project</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_PL4Q_Opportunity_Record_Type2__c</fullName>
        <description>To store Opportunity record type for PL4Q report for Channel BU</description>
        <label>Opportunity Record Type2</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CCR Opportunity</fullName>
                </value>
                <value>
                    <fullName>NDR Opportunity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_PL4Q_Oppty_Rec_Type__c</fullName>
        <description>To store Opportunity Record type for PL4Q report</description>
        <label>Opportunity Record Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DND Opportunity</fullName>
                </value>
                <value>
                    <fullName>Channel- Engineering Opportunity</fullName>
                </value>
                <value>
                    <fullName>Channel- Sales Opportunity</fullName>
                </value>
                <value>
                    <fullName>Opportunity - Engineering Project</fullName>
                </value>
                <value>
                    <fullName>Opportunity - Sales Project</fullName>
                </value>
                <value>
                    <fullName>Engineering Opportunity-CSD</fullName>
                </value>
                <value>
                    <fullName>Sales Opportunity-CSD</fullName>
                </value>
                <value>
                    <fullName>IND - Sales Project</fullName>
                </value>
                <value>
                    <fullName>IND - Engineering project</fullName>
                </value>
                <value>
                    <fullName>ADM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_PL4Q_Phase__c</fullName>
        <description>To store Phase value for Pipeline 4Q report</description>
        <label>Phase</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Dead</fullName>
                </value>
                <value>
                    <fullName>Lost - Closed</fullName>
                </value>
                <value>
                    <fullName>Dead - Closed</fullName>
                </value>
                <value>
                    <fullName>Lost/Dead - Closed</fullName>
                </value>
                <value>
                    <fullName>Discussion</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_PL4Q_Process_Status__c</fullName>
        <description>To store Pipeline 4Q Rolling Process Status</description>
        <label>Process Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-prod</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Ramp-down</fullName>
                </value>
                <value>
                    <fullName>EOL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_PL4Q_Type__c</fullName>
        <description>To store Pipeline 4Q Rolling Type of the Business</description>
        <label>Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Transfer existing Business</fullName>
                </value>
                <value>
                    <fullName>Defend existing Business</fullName>
                </value>
                <value>
                    <fullName>Stocking Package</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_PL4Q_Won_Date__c</fullName>
        <description>To store Pipeline 4Q Rolling Won Date</description>
        <label>Won Date</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_PL4Q_aplActivePL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check whether it is active for Pipeline4Q report</description>
        <label>APL Active Pipeline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACP_Pipeline__c</fullName>
        <description>To store Pipeline 4Q Rolling Report ID</description>
        <inlineHelpText>Enter Pipeline 4Q Rolling Report ID</inlineHelpText>
        <label>Pipeline 4Q Rolling Report</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_SoldTo__c</fullName>
        <description>To Store SoldTo Code</description>
        <inlineHelpText>Enter Sold To Code</inlineHelpText>
        <label>Sold To Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_WW__c</fullName>
        <description>To Store WW Account Code</description>
        <inlineHelpText>Enter Worldwide Account Code</inlineHelpText>
        <label>WW Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_Won_BU_Profit_Center__c</fullName>
        <description>To store BU Profit Center value for DND Won report</description>
        <label>BU Profit Center</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Data and Devices</fullName>
                </value>
                <value>
                    <fullName>Data &amp; Devices</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_Won_Confidence__c</fullName>
        <description>To store Confidence in Won report</description>
        <label>Confidence</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Won</fullName>
                </value>
                <value>
                    <fullName>Weak</fullName>
                </value>
                <value>
                    <fullName>50/50</fullName>
                </value>
                <value>
                    <fullName>Likely</fullName>
                </value>
                <value>
                    <fullName>Commit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>